--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
   "publisher": "Likan",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "author": {
     "name": "likan"
   },
@@ -39,6 +39,7 @@
     "onCommand:likan.other.convertString",
     "onCommand:likan.other.scriptRunner",
     "onCommand:likan.other.trimWhitespace",
+    "onCommand:other.addToWorkspace",
     "onView:likan-explorer"
   ],
   "capabilities": {
