--- a/package.json
+++ b/package.json
@@ -406,9 +406,9 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm package",
-    "package": "cross-env NODE_ENV=production webpack",
-    "develop": "cross-env NODE_ENV=development webpack --watch --stats-error-details",
-    "preview": "cross-env NODE_ENV=test webpack --profile --progress",
+    "package": "cross-env NODE_ENV=production rollup -c",
+    "develop": "cross-env NODE_ENV=development rollup -wc",
+    "preview": "cross-env NODE_ENV=test rollup -wc",
     "patch": "standard-version -a -r patch",
     "minor": "standard-version -a -r minor",
     "major": "standard-version -a -r major",
@@ -419,10 +419,17 @@
     "precommit": "pnpm fix"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-inject": "^4.0.4",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.5.0",
     "@types/lodash-es": "^4.17.6",
+    "@types/node": "16.x.x",
     "@types/normalize-path": "^3.0.0",
     "@types/vscode": "^1.66.0",
-    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "commitizen": "^4.2.5",
@@ -435,13 +442,13 @@
     "eslint-plugin-unicorn": "^43.0.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.7.1",
+    "rollup": "^2.79.0",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.8.1",
     "standard-version": "^9.5.0",
-    "terser-webpack-plugin": "^5.3.6",
-    "ts-loader": "^9.2.8",
-    "typescript": "~4.7",
-    "webpack": "^5.70.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2"
+    "tslib": "^2.4.0",
+    "typescript": "~4.7"
   },
   "dependencies": {
     "dayjs": "^1.11.5",
