--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
     "target": "ESNext",
     "lib": ["ESNext"],
     "sourceMap": false,
     "strict": true,
     "baseUrl": "./",
+    "removeComments": true,
     "allowJs": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
+    "moduleResolution": "node",
     "paths": {
       "@/*": ["./src/*"]
     },
