--- a/package.json
+++ b/package.json
@@ -385,28 +385,20 @@
     },
     "snippets": [
       {
-        "language": "javascript",
-        "path": "./public/configurations/snippets.json"
-      },
-      {
-        "language": "javascriptreact",
-        "path": "./public/configurations/snippets.json"
-      },
-      {
         "language": "typescript",
-        "path": "./public/configurations/snippets.json"
+        "path": "./public/snippets/.code-snippets"
+      },
+      {
+        "language": "javascript",
+        "path": "./public/snippets/.code-snippets"
       },
       {
         "language": "typescriptreact",
-        "path": "./public/configurations/snippets.json"
+        "path": "./public/snippets/.code-snippets"
       },
       {
-        "language": "vue",
-        "path": "./public/configurations/snippets.json"
-      },
-      {
-        "language": "html",
-        "path": "./public/configurations/snippets.json"
+        "language": "javascriptreact",
+        "path": "./public/snippets/.code-snippets"
       }
     ]
   },
