--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
   "publisher": "Likan",
-  "version": "1.0.29",
+  "version": "1.0.30",
   "author": {
     "name": "likan"
   },
@@ -206,7 +206,7 @@
         },
         {
           "command": "likan.other.packageScript",
-          "group": "2_workspace",
+          "group": "2_workspace@1",
           "when": "explorerResourceIsRoot || resourceFilename == package.json || explorerResourceIsFolder"
         }
       ],
