feat: 优化tag wrap, change case 修改为调用lodash的words函数, 转换模板字符串现在会找到第一个匹配的引号对

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,13 +7,8 @@
       "isBackground": true,
       "label": "npm: develop",
       "problemMatcher": [],
+      "detail": "rollup",
 
-      "presentation": {
-        "reveal": "never",
-        "clear": true,
-        "close": true,
-        "group": "watchers"
-      },
       "group": {
         "kind": "build",
         "isDefault": true
