feat: 移除ci, readme, changelog, 修改文档注释路径为相对路径, 新增两个case

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,8 +1,6 @@
-.github/**
 .vscode/**
 node_modules/**
 src/**
-public/images/**
 
 .editorconfig
 .eslintrc.js
@@ -12,3 +10,5 @@ public/images/**
 pnpm-lock.yaml
 rollup.config.js
 tsconfig.json
+
+*.map.js
