--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Likan",
   "displayName": "Likan",
-  "description": "这是一个对 vscode 所缺少的功能补全的插件...",
+  "description": "No Description here.",
   "publisher": "Likan",
   "version": "1.0.36",
   "author": "likan",
@@ -382,10 +382,6 @@
     "vscode:prepublish": "pnpm package",
     "package": "cross-env NODE_ENV=production rollup -c",
     "develop": "cross-env NODE_ENV=development rollup -wc",
-    "preview": "cross-env NODE_ENV=test rollup -wc",
-    "patch": "standard-version -a -r patch",
-    "minor": "standard-version -a -r minor",
-    "major": "standard-version -a -r major",
     "format": "prettier ./*.js ./src/**/* -w -u --cache",
     "fix": "pnpm format && pnpm lint",
     "lint": "eslint ./src/**/* --fix --cache --cache-location ./node_modules/.cache/eslint/.eslintcache --cache-strategy content",
@@ -405,9 +401,7 @@
     "@types/vscode": "^1.66.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
-    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.22.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
@@ -417,7 +411,6 @@
     "rollup": "^2.79.0",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-visualizer": "^5.8.1",
     "standard-version": "^9.5.0",
     "tslib": "^2.4.0",
     "typescript": "~4.7"
@@ -432,11 +425,6 @@
   "vsce": {
     "dependencies": false,
     "yarn": false
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
   },
   "volta": {
     "node": "16.17.0",
