--- a/package.json
+++ b/package.json
@@ -391,14 +391,13 @@
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-inject": "^4.0.4",
-    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.5.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "16.x.x",
     "@types/normalize-path": "^3.0.0",
-    "@types/vscode": "^1.66.0",
+    "@types/vscode": "^1.72.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "cross-env": "^7.0.3",
@@ -416,6 +415,8 @@
     "typescript": "~4.7"
   },
   "dependencies": {
+    "comment-parser": "^1.3.1",
+    "date-fns": "^2.29.3",
     "lodash-es": "^4.17.21",
     "normalize-path": "^3.0.0",
     "open": "^8.4.0",
