--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,15 +1,4 @@
-.vscode/**
-node_modules/**
-src/**
-
-.editorconfig
-.eslintrc.js
-.gitignore
-.npmrc
-.prettierignore
-.prettierrc.js
-pnpm-lock.yaml
-rollup.config.js
-tsconfig.json
-
-*.map.js
+**/*
+!package.json
+!LICENSE
+!lib
