--- a/package.json
+++ b/package.json
@@ -451,6 +451,7 @@
   "dependencies": {
     "comment-parser": "^1.3.1",
     "date-fns": "^2.29.3",
+    "find-up": "^6.3.0",
     "lodash-es": "^4.17.21",
     "normalize-path": "^3.0.0",
     "open": "^8.4.0",
