--- a/package.json
+++ b/package.json
@@ -373,8 +373,8 @@
           "type": "object",
           "description": "changeCase 包含的特殊字符字符(除字母数字外)",
           "default": {
-            "-": true,
             "_": true,
+            "-": true,
             ".": false,
             "/": false,
             " ": false
@@ -431,6 +431,7 @@
     "@types/lodash-es": "^4.17.6",
     "@types/node": "16.x.x",
     "@types/normalize-path": "^3.0.0",
+    "@types/numeral": "^2.0.2",
     "@types/vscode": "^1.72.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
@@ -451,10 +452,11 @@
   "dependencies": {
     "comment-parser": "^1.3.1",
     "date-fns": "^2.29.3",
-    "find-up": "^6.3.0",
     "lodash-es": "^4.17.21",
     "normalize-path": "^3.0.0",
+    "numeral": "^2.0.6",
     "open": "^8.4.0",
+    "pkg-dir": "^7.0.0",
     "uint8arrays": "^3.1.0",
     "vscode-uri": "^3.0.3"
   },
