--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "No Description here.",
   "publisher": "Likan",
-  "version": "1.1.24",
+  "version": "1.1.27",
   "author": "likan",
   "repository": "https://github.com/lirkang/likan",
   "engines": {
@@ -127,8 +127,13 @@
           "when": "viewItem =~ /^directory-/"
         },
         {
-          "command": "likan.open.newWindow",
+          "command": "likan.open.currentWindow",
           "group": "inline@1",
+          "when": "view == likan-explorer"
+        },
+        {
+          "command": "likan.open.newWindow",
+          "group": "inline@2",
           "when": "view == likan-explorer"
         },
         {
