--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "onCommand:likan.other.packageScript",
     "onCommand:likan.other.scriptRunner",
     "onCommand:other.addToWorkspace",
+    "onCommand:likan.other.clipboardCut",
     "onView:likan-explorer"
   ],
   "contributes": {
@@ -230,7 +231,7 @@
         },
         {
           "command": "likan.other.clipboardCut",
-          "when": "editorIsOpen && !editorReadonly"
+          "when": "editorIsOpen && !editorReadonly && config.likan.other.clipboardCut"
         },
         {
           "command": "likan.other.packageScript",
@@ -468,6 +469,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rollup": "^2.79.0",
+    "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
@@ -477,6 +479,7 @@
     "comment-parser": "^1.3.1",
     "date-fns": "^2.29.3",
     "lodash-es": "^4.17.21",
+    "node-fetch": "^3.2.10",
     "normalize-path": "^3.0.0",
     "numeral": "^2.0.6",
     "open": "^8.4.0",
