--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "No Description here.",
   "publisher": "Likan",
-  "version": "1.1.35",
+  "version": "1.1.36",
   "author": "likan",
   "repository": "https://github.com/lirkang/likan",
   "engines": {
@@ -498,6 +498,7 @@
   "dependencies": {
     "comment-parser": "^1.3.1",
     "date-fns": "^2.29.3",
+    "file-type": "^18.0.0",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.2.10",
     "normalize-path": "^3.0.0",
